--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </nav>
 
     <main class="container-fluid position-relative">
+        
         <div class="row position-absolute h-100 w-100">
 
             <aside class="row col-12 col-md-4 col-lg-3 m-0 border">
@@ -25,10 +26,11 @@
                     <button class="btn btn-success d-block col-6 offset-3" id="timerStart">Start</button>
                     <button class="btn btn-primary d-none col-6 offset-3" id="timerPause">Pause</button>
                     <button class="btn btn-primary d-none col-6 offset-3" id="timerResume">Resume</button>
+                    <div id="spin"></div>
                 </div>
                 <div class="col-6 col-md-12 row m-0 align-items-center text-center">
-                    <span class="col-6">Player:</span><span class="col-6 initialism" id="scorePlayer">0</span>
-                    <span class="col-6">CPU:</span><span class="col-6 initialism" id="scoreCPU">0</span>
+                    <span class="col-6">Player:</span><span class="col-6 initialism" id="scorePlayer"></span>
+                    <span class="col-6">CPU:</span><span class="col-6 initialism" id="scoreCPU"></span>
                 </div>
             </aside>
 
@@ -55,14 +57,13 @@
         </div>
     </main>
 
-    <script type="text/javascript" charset="UTF-8" src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script type="text/javascript" src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script type="text/javascript" src="./node_modules/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="./src/app.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="./src/timer.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="./src/score.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="./src/modal.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="./src/gride.js"></script>
-
+    <script type="text/javascript" src="./src/modal.js"></script>
+    <script type="text/javascript" src="./src/timer.js"></script>
+    <script type="text/javascript" src="./src/score.js"></script>
+    <script type="text/javascript" src="./src/gride.js"></script>
+    <script type="text/javascript" src="./src/app.js"></script>
 </body>
 
 </html >
