--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
                     <button class="btn btn-success d-block col-6 offset-3" id="timerStart">Start</button>
                     <button class="btn btn-primary d-none col-6 offset-3" id="timerPause">Pause</button>
                     <button class="btn btn-primary d-none col-6 offset-3" id="timerResume">Resume</button>
+                    <div id="spin"></div>
                 </div>
                 <div class="col-6 col-md-12 row m-0 align-items-center text-center">
-                    <span class="col-6">Player:</span><span class="col-6 initialism" id="scorePlayer">0</span>
-                    <span class="col-6">CPU:</span><span class="col-6 initialism" id="scoreCPU">0</span>
+                    <span class="col-6">Player:</span><span class="col-6 initialism" id="scorePlayer"></span>
+                    <span class="col-6">CPU:</span><span class="col-6 initialism" id="scoreCPU"></span>
                 </div>
             </aside>
 
